fixed layout bug in full gallery

--- a/Resound/Assets/css/resound.css
+++ b/Resound/Assets/css/resound.css
@@ -664,12 +664,13 @@ body.is-mobile .navbar
     word-break: break-all;
 }
 
-.full-gallery-list
+.full-gallery-album
 {
     width: 16.5%;
+    min-width: min-content;
 }
 
-.full-gallery-list .album-cover
+.full-gallery-album .album-cover
 {
     border: none !important
 }
